<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="283dp"
        android:layout_height="283dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:contentDescription="@string/frist_image"
        android:src="@mipmap/summer_holidays_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/my_cockteils"
        android:textColor="@color/black_figma"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:textColor="@color/black_figma"
            android:text="@string/add_your_first_n_cocktail_here" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/arrow"
            android:src="@drawable/arrow1" />

        <ImageView
            android:id="@+id/add_cocktails_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/add_cockteils"
            android:src="@drawable/add_button" />


    </LinearLayout>


</LinearLayout>